[package]
name = "loongarch_vcpu"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.19"
cfg-if = "1.0"
bitflags = "2.2"
bit_field = "0.10"
crate_interface = "0.1"
memoffset = { version = "0.6", features = ["unstable_const"] }


axerrno = "0.1.0"
page_table_entry = "0.5"
memory_addr = "0.3.1"

axaddrspace = { path = "/home/geng/axaddrspace" }
axvcpu = { path = "/home/geng/axvcpu" }
